Bug 1823888 - Clamp scale factor used in computing synthetic-bold offsets, to avoid bad print/pdf output. r=dholbert

Differential Revision: https://phabricator.services.mozilla.com/D174864